--- a/argon-dashboard-master/examples/tables.html
+++ b/argon-dashboard-master/examples/tables.html
@@ -193,7 +193,7 @@
               </td>
               <td ng-model="resourcesTypeId">
                   <span  class="badge badge-dot" >
-                    {{x.loainguyenlieu_LOAINGUYENLIEU_ID}}
+                    {{x.tenloainguyenlieu}}
                   </span>
               </td>
               <td>
