--- a/argon-dashboard-master/examples/tables.html
+++ b/argon-dashboard-master/examples/tables.html
@@ -365,9 +365,9 @@
                           </div>
                           <div>
                             <div class="float-md-right mt-3">
-                              <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#modifyMaterial"><i class="fas fa-plus-circle"></i> Cập Nhật</button>
+                              <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#b{{x.nguyenlieu_ID}}"><i class="fas fa-plus-circle"></i> Cập Nhật</button>
                               <!-- Modal -->
-                              <div class="modal fade" id="modifyMaterial" tabindex="-1" role="dialog" aria-labelledby="modifyMaterialTitle" aria-hidden="true">
+                              <div class="modal fade" id="b{{x.nguyenlieu_ID}}" tabindex="-1" role="dialog" aria-labelledby="modifyMaterialTitle" aria-hidden="true">
                                 <div class="modal-dialog modal-lg" role="document">
                                   <div class="modal-content">
                                     <div class="modal-header">
@@ -472,8 +472,8 @@
                                 </div>
                               </div>
                               <button type="button" class="btn btn-danger btn-sm"><i class="fas fa-lock"></i> Ngừng Kinh Doanh</button>
-                              <button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#modalDeleteMaterials"><i class="far fa-trash-alt"></i> Xóa</button>
-                              <div class="modal fade" id="modalDeleteMaterials" tabindex="-1" role="dialog" aria-labelledby="modalDeleteMaterials" aria-hidden="true">
+                              <button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#c{{x.nguyenlieu_ID}}"><i class="far fa-trash-alt"></i> Xóa</button>
+                              <div class="modal fade" id="c{{x.nguyenlieu_ID}}" tabindex="-1" role="dialog" aria-labelledby="modalDeleteMaterials" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-scrollable" role="document">
                                   <div class="modal-content ">
                                     <div class="modal-header">
